force-app/main/default/objects/Project__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Candidate)</relationshipLabel>
    <relationshipName>CandidateProjects</relationshipName>
    <type>Lookup</type>
</CustomField>