force-app/main/default/objects/Project__c/fields/Candidate_Company__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Candidate Company)</relationshipLabel>
    <relationshipName>CandidateAccountProjects</relationshipName>
    <type>Lookup</type>
</CustomField>