force-app/main/default/objects/Project__c/fields/contract_betaaltermijn_freelancer_kortin__c.field-meta.xml
<CustomField>
    <fullName>contract_betaaltermijn_freelancer_kortin__c</fullName>
    <label>contract_betaaltermijn_freelancer_kortin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>