force-app/main/default/objects/Project__c/fields/contract_betaaltermijn_freelancer_period__c.field-meta.xml
<CustomField>
    <fullName>contract_betaaltermijn_freelancer_period__c</fullName>
    <label>contract_betaaltermijn_freelancer_period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>