force-app/main/default/objects/Project__c/fields/contract_betaaltermijn_freelancer_show_k__c.field-meta.xml
<CustomField>
    <fullName>contract_betaaltermijn_freelancer_show_k__c</fullName>
    <defaultValue>false</defaultValue>
    <label>contract_betaaltermijn_freelancer_show_k</label>
    <type>Checkbox</type>
</CustomField>