force-app/main/default/objects/Project__c/fields/contract_extra_toelichting__c.field-meta.xml
<CustomField>
    <fullName>contract_extra_toelichting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>contract_extra_toelichting</label>
    <type>Checkbox</type>
</CustomField>