force-app/main/default/objects/Project__c/fields/contract_extra_toelichting_text__c.field-meta.xml
<CustomField>
    <fullName>contract_extra_toelichting_text__c</fullName>
    <label>contract_extra_toelichting_text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>