force-app/main/default/objects/Project__c/fields/contract_facturatie__c.field-meta.xml
<CustomField>
    <fullName>contract_facturatie__c</fullName>
    <label>contract_facturatie</label>
    <length>10</length>
    <type>Text</type>
</CustomField>