force-app/main/default/objects/Project__c/fields/contract_facturatie_referentie__c.field-meta.xml
<CustomField>
    <fullName>contract_facturatie_referentie__c</fullName>
    <label>contract_facturatie_referentie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>