force-app/main/default/objects/Project__c/fields/contract_inzet_aantal__c.field-meta.xml
<CustomField>
    <fullName>contract_inzet_aantal__c</fullName>
    <label>contract_inzet_aantal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>