force-app/main/default/objects/Project__c/fields/contract_optie_verlenging__c.field-meta.xml
<CustomField>
    <fullName>contract_optie_verlenging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>contract_optie_verlenging</label>
    <type>Checkbox</type>
</CustomField>