force-app/main/default/objects/Project__c/fields/contract_optie_verlenging_periode__c.field-meta.xml
<CustomField>
    <fullName>contract_optie_verlenging_periode__c</fullName>
    <label>contract_optie_verlenging_periode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>