force-app/main/default/objects/Project__c/fields/contract_opzegtermijn__c.field-meta.xml
<CustomField>
    <fullName>contract_opzegtermijn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>contract_opzegtermijn</label>
    <type>Checkbox</type>
</CustomField>