force-app/main/default/objects/Project__c/fields/contract_opzegtermijn_periode__c.field-meta.xml
<CustomField>
    <fullName>contract_opzegtermijn_periode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>contract_opzegtermijn_periode</label>
    <type>Checkbox</type>
</CustomField>