force-app/main/default/objects/Project__c/fields/contract_opzegtermijn_periode_per__c.field-meta.xml
<CustomField>
    <fullName>contract_opzegtermijn_periode_per__c</fullName>
    <label>contract_opzegtermijn_periode_per</label>
    <length>10</length>
    <type>Text</type>
</CustomField>