force-app/main/default/objects/Project__c/fields/contract_periode_indicatie__c.field-meta.xml
<CustomField>
    <fullName>contract_periode_indicatie__c</fullName>
    <label>contract_periode_indicatie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>