force-app/main/default/objects/Project__c/fields/contract_soort__c.field-meta.xml
<CustomField>
    <fullName>contract_soort__c</fullName>
    <label>contract_soort</label>
    <length>10</length>
    <type>Text</type>
</CustomField>