force-app/main/default/objects/Project__c/fields/contract_urenstaat_verstrekt_door__c.field-meta.xml
<CustomField>
    <fullName>contract_urenstaat_verstrekt_door__c</fullName>
    <defaultValue>false</defaultValue>
    <label>contract_urenstaat_verstrekt_door</label>
    <type>Checkbox</type>
</CustomField>