force-app/main/default/objects/Project__c/fields/custom_vat_client__c.field-meta.xml
<CustomField>
    <fullName>custom_vat_client__c</fullName>
    <label>custom_vat_client</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>