force-app/main/default/objects/Project__c/fields/factuur_cc_email__c.field-meta.xml
<CustomField>
    <fullName>factuur_cc_email__c</fullName>
    <label>factuur_cc_email</label>
    <type>Email</type>
</CustomField>