force-app/main/default/objects/Project__c/fields/freelancer_type_inhuurovereenkomst__c.field-meta.xml
<CustomField>
    <fullName>freelancer_type_inhuurovereenkomst__c</fullName>
    <label>freelancer_type_inhuurovereenkomst</label>
    <length>10</length>
    <type>Text</type>
</CustomField>