force-app/main/default/objects/Project__c/fields/inkoop_tarief__c.field-meta.xml
<CustomField>
    <fullName>inkoop_tarief__c</fullName>
    <label>inkoop_tarief</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>