force-app/main/default/objects/Project__c/fields/Invoicing_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoicing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Invoicing Account)</relationshipLabel>
    <relationshipName>InvoicingProjects</relationshipName>
    <type>Lookup</type>
</CustomField>