force-app/main/default/objects/Project__c/fields/invoicing_methode__c.field-meta.xml
<CustomField>
    <fullName>invoicing_methode__c</fullName>
    <label>invoicing_methode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Factoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>