force-app/main/default/objects/Project__c/fields/is_custom_vat__c.field-meta.xml
<CustomField>
    <fullName>is_custom_vat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_custom_vat</label>
    <type>Checkbox</type>
</CustomField>