force-app/main/default/objects/Project__c/fields/is_custom_vat_client__c.field-meta.xml
<CustomField>
    <fullName>is_custom_vat_client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_custom_vat_client</label>
    <type>Checkbox</type>
</CustomField>