force-app/main/default/objects/Project__c/fields/is_custom_vat_freelance__c.field-meta.xml
<CustomField>
    <fullName>is_custom_vat_freelance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_custom_vat_freelance</label>
    <type>Checkbox</type>
</CustomField>