force-app/main/default/objects/Project__c/fields/is_freelancer_first_project__c.field-meta.xml
<CustomField>
    <fullName>is_freelancer_first_project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_freelancer_first_project</label>
    <type>Checkbox</type>
</CustomField>