force-app/main/default/objects/Project__c/fields/LegacyAanvraagId__c.field-meta.xml
<CustomField>
    <fullName>LegacyAanvraagId__c</fullName>
    <label>LegacyAanvraagId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>