force-app/main/default/objects/Project__c/fields/LegacyCandidateCompanyId__c.field-meta.xml
<CustomField>
    <fullName>LegacyCandidateCompanyId__c</fullName>
    <externalId>true</externalId>
    <label>LegacyCandidateCompanyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>