force-app/main/default/objects/Project__c/fields/LegacyCandidateId__c.field-meta.xml
<CustomField>
    <fullName>LegacyCandidateId__c</fullName>
    <externalId>true</externalId>
    <label>LegacyCandidateId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>