force-app/main/default/objects/Project__c/fields/LegacyClientManagerId__c.field-meta.xml
<CustomField>
    <fullName>LegacyClientManagerId__c</fullName>
    <label>LegacyClientManagerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>