force-app/main/default/objects/Project__c/fields/LegacyRecruiterId__c.field-meta.xml
<CustomField>
    <fullName>LegacyRecruiterId__c</fullName>
    <label>LegacyRecruiterId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>