force-app/main/default/objects/Project__c/fields/LegacyVerkoopCompanyId__c.field-meta.xml
<CustomField>
    <fullName>LegacyVerkoopCompanyId__c</fullName>
    <label>LegacyVerkoopCompanyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>