force-app/main/default/objects/Project__c/fields/OpaStatus__c.field-meta.xml
<CustomField>
    <fullName>OpaStatus__c</fullName>
    <label>OpaStatus</label>
    <length>3</length>
    <type>Text</type>
</CustomField>