force-app/main/default/objects/Project__c/fields/prognose_einddatum__c.field-meta.xml
<CustomField>
    <fullName>prognose_einddatum__c</fullName>
    <label>prognose_einddatum</label>
    <type>Date</type>
</CustomField>