force-app/main/default/objects/Project__c/fields/project_functie__c.field-meta.xml
<CustomField>
    <fullName>project_functie__c</fullName>
    <label>project_functie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>