force-app/main/default/objects/Project__c/fields/reiskosten__c.field-meta.xml
<CustomField>
    <fullName>reiskosten__c</fullName>
    <defaultValue>false</defaultValue>
    <label>reiskosten</label>
    <type>Checkbox</type>
</CustomField>