force-app/main/default/objects/Project__c/fields/reiskosten_per_dag__c.field-meta.xml
<CustomField>
    <fullName>reiskosten_per_dag__c</fullName>
    <label>reiskosten_per_dag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>