force-app/main/default/objects/Project__c/fields/set_freelancer_first_project_flag__c.field-meta.xml
<CustomField>
    <fullName>set_freelancer_first_project_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>set_freelancer_first_project_flag</label>
    <type>Checkbox</type>
</CustomField>