force-app/main/default/objects/Project__c/fields/verkoop_auto_incasso__c.field-meta.xml
<CustomField>
    <fullName>verkoop_auto_incasso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>verkoop_auto_incasso</label>
    <type>Checkbox</type>
</CustomField>