force-app/main/default/objects/Project__c/fields/verkoop_auto_incasso_korting__c.field-meta.xml
<CustomField>
    <fullName>verkoop_auto_incasso_korting__c</fullName>
    <label>verkoop_auto_incasso_korting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>