force-app/main/default/objects/Project__c/fields/verkoop_auto_incasso_periode__c.field-meta.xml
<CustomField>
    <fullName>verkoop_auto_incasso_periode__c</fullName>
    <label>verkoop_auto_incasso_periode</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>