force-app/main/default/objects/Project__c/fields/verkoop_korting_check__c.field-meta.xml
<CustomField>
    <fullName>verkoop_korting_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>verkoop_korting_check</label>
    <type>Checkbox</type>
</CustomField>