force-app/main/default/objects/Project__c/fields/verkoop_marge_bruto__c.field-meta.xml
<CustomField>
    <fullName>verkoop_marge_bruto__c</fullName>
    <label>verkoop_marge_bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>