force-app/main/default/objects/Project__c/fields/verkoop_tarief__c.field-meta.xml
<CustomField>
    <fullName>verkoop_tarief__c</fullName>
    <label>verkoop_tarief</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>