force-app/main/default/objects/Project__c/fields/verkoopKorting_tarief__c.field-meta.xml
<CustomField>
    <fullName>verkoopKorting_tarief__c</fullName>
    <label>verkoopKorting_tarief</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>