force-app/main/default/objects/Project__c/fields/versie_inkoopvoorwaarden__c.field-meta.xml
<CustomField>
    <fullName>versie_inkoopvoorwaarden__c</fullName>
    <label>versie_inkoopvoorwaarden</label>
    <length>255</length>
    <type>Text</type>
</CustomField>