force-app/main/default/objects/Project__c/fields/versie_verkoopvoorwaarden__c.field-meta.xml
<CustomField>
    <fullName>versie_verkoopvoorwaarden__c</fullName>
    <label>versie_verkoopvoorwaarden</label>
    <length>255</length>
    <type>Text</type>
</CustomField>