force-app/main/default/objects/Project__c/fields/werkgeversverklaring_ontvangen__c.field-meta.xml
<CustomField>
    <fullName>werkgeversverklaring_ontvangen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>werkgeversverklaring_ontvangen</label>
    <type>Checkbox</type>
</CustomField>